--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,6 +3,7 @@ load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 load("@rules_cc//cc:defs.bzl", "cc_library")
 load("@bazel_skylib//rules:write_file.bzl", "write_file")
+load("@bazel_skylib//lib:selects.bzl", "selects")
 load("@rules_python//python:packaging.bzl", "py_wheel")
 load("@com_github_bentoml_plugins//rules/py:packaging.bzl", "py_package")
 load("@python_abi//:abi.bzl", "python_abi")
@@ -26,6 +27,23 @@ buildifier(
     name = "buildifier",
 )
 
+COPTS = [
+    "-O3",
+    "-pthread",
+    "-std=c++11",
+    "-fPIC",
+    "-Wall",
+] + selects.with_or({
+    "//conditions:default": [],
+    "@bazel_tools//src/conditions:linux_x86_64": [
+        "-mavx",
+        "-mavx2",
+        "-mfma",
+        "-mf16c",
+        "-msse3",
+    ],
+})
+
 cc_library(
     name = "context",
     srcs = [
@@ -36,6 +54,7 @@ cc_library(
         "//src/whispercpp:context.h",
         "@com_github_ggerganov_whisper//:whisper.h",
     ],
+    copts = COPTS,
     defines = ["BAZEL_BUILD"],
     deps = [
         "@com_github_ggerganov_whisper//:whisper",
@@ -52,13 +71,7 @@ pybind_extension(
         "@com_github_ggerganov_whisper//:examples/common.h",
         "@com_github_ggerganov_whisper//:whisper.h",
     ],
-    copts = [
-        "-O3",
-        "-pthread",
-        "-std=c++11",
-        "-fPIC",
-        "-Wall",
-    ],
+    copts = COPTS,
     defines = ["BAZEL_BUILD"],
     deps = [
         ":context",
@@ -119,6 +132,7 @@ py_wheel(
         "Topic :: Software Development",
         "Topic :: Software Development :: Libraries",
         "Topic :: Software Development :: Libraries :: Python Modules",
+        "Programming Language :: C++",
         "Programming Language :: Python",
         "Programming Language :: Python :: 3 :: Only",
         "Programming Language :: Python :: 3.8",
@@ -147,5 +161,8 @@ py_wheel(
         ":ci": "{BUILD_EMBED_LABEL}",
     }),
     visibility = ["//:__subpackages__"],
-    deps = [":whispercpp_pkg"],
+    deps = [
+        ":api.so",
+        ":whispercpp_pkg",
+    ],
 )
