--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = master
 [submodule "extern/whispercpp"]
 	path = extern/whispercpp
-	url = https://github.com/ggerganov/whisper.cpp.git
-	branch = master
+	url = git@github.com:transcribee/whisper.cpp.git
+	branch = pajowu/progress_callback
